2010-07-21  Emanuel Schuetze <emanuel@intevation.de>

	* README.pt.txt: Add readme file for Portuguese. Needs translation.
	
	* website/donate.htm4, website/donate-de.htm4: Add new sponsor.

2010-07-19  Emanuel Schuetze <emanuel@intevation.de>

	* website/donate.htm4, website/donate-de.htm4: Add new sponsor.

2010-07-15  Emanuel Schuetze <emanuel@intevation.de>

	* logo/gpg4win-msi-header_install-493x58.bmp,
	logo/gpg4win-msi-header_uninstall-493x58.bmp,
	logo/gpg4win-msi-header_install-uninstall-493x58.xcf,
	logo/gpg4win-msi-wizard_install-493x312.bmp,
	logo/gpg4win-msi-wizard_uninstall-493x312.bmp,
	logo/gpg4win-msi-wizard_install-uninstall-493x312.xcf:
	Add msi installer bitmaps and gimp source files (xcf).

2010-07-09  Emanuel Schuetze <emanuel@intevation.de>

	* website/localize-gpg4win.htm4: Add compendium section. Remove
	old manual sections (einsteiger, durchblicker).

	* website/links.htm4, website/links-de.htm4: Add gpg4kde link.

2010-07-06  Emanuel Schuetze <emanuel@intevation.de>

	* website/donate.htm4, website/donate-de.htm4: Add new sponsor.

2010-06-22  Emanuel Schuetze <emanuel@intevation.de>

	* website/donate.htm4, website/donate-de.htm4: Add new sponsor.

	* website/template_link_boxes_de.m4,
	website/template_link_boxes_en.m4: Add item number for paypal.

2010-06-15  Emanuel Schuetze <emanuel@intevation.de>

	* website/template_link_boxes_de.m4, 
	website/template_link_boxes_en.m4:
	Add link to new donate page.
	* website/index.htm4, website/index-de.htm4:
	Add donate news.
	* website/donate.htm4, website/donate-de.htm4:
	Add new pages.
	* website/documentation-de.htm4, website/documentation.htm4: 
	Add section about book.

2010-06-14  Emanuel Schuetze <emanuel@intevation.de>

	* website/index.htm4, website/index-de.htm4,
	website/newsarchive.htm4, website/newsarchive-de.htm4,
	website/template_header.m4: Update 2.0.3 news.

2010-05-29  Werner Koch  <wk@g10code.com>

	* website/versions.m4: Post release update.
