@@ -1,21 +1,21 @@
-m4_define(`VERSION',`2.0.3')
+m4_define(`VERSION',`2.0.4')
 m4_define(`DOWNLOAD_URL',`http://ftp.gpg4win.org/gpg4win-VERSION.exe')
 m4_define(`DL_SIZE',`34 MByte')
 m4_define(`LDOWNLOAD_URL',`http://ftp.gpg4win.org/gpg4win-light-VERSION.exe')
 m4_define(`LDL_SIZE',`12 MByte')
-m4_define(`DL_DATE',`2010-05-29')
-m4_define(`SHA1_SRC',`f21b20f7d05a0555416f86be9b85e6090ec16572')
-m4_define(`SHA1_EXE',`30d25ce2f411afb58f8346f1c6036158fc7884f5')
-m4_define(`SHA1_EXL',`08db08232b5882e27f8f6b819bac3dbc8d077024')
-m4_define(`SHA1_EXS',`7a5ef4be44ac712e2b77a77156dbaede2529c03d')
-m4_define(`MD5_SRC',`dd37cdc2e3688fa9346cbe97a9a01629')
-m4_define(`MD5_EXE',`2a1714b35574bed43674d460ad8bc848')
-m4_define(`MD5_EXL',`51d3109a522146ef4b854f161af41cd6')
-m4_define(`MD5_EXS',`d6c1dc1192978ea4d532d0b78807c472')
-m4_define(`LEN_SRC',`7458825')
-m4_define(`LEN_EXE',`35928589')
-m4_define(`LEN_EXL',`12405860')
-m4_define(`LEN_EXS',`265784974')
+m4_define(`DL_DATE',`2010-07-28')
+m4_define(`SHA1_SRC',`346cf3bbd91310c05df062e2ded3ce726b22fae6')
+m4_define(`SHA1_EXE',`4c9cb8f046eceb68e7912c004a7345365a151f69')
+m4_define(`SHA1_EXL',`db644790aa411f1744bb1d94e52311b8c6bf4a8e')
+m4_define(`SHA1_EXS',`d45df4083d076c5907a5d3b2441d9068f403d213')
+m4_define(`MD5_SRC',`b41142bd185b1f2478ffc11939605a8c')
+m4_define(`MD5_EXE',`4446661096186aa92ccd8b2e25a5921b')
+m4_define(`MD5_EXL',`1b71fe7b408d875a5eebeefee89a4317')
+m4_define(`MD5_EXS',`1e6e6fbbce6e3c35b8b72ffe1817bdff')
+m4_define(`LEN_SRC',`6901636')
+m4_define(`LEN_EXE',`35928792')
+m4_define(`LEN_EXL',`12406071')
+m4_define(`LEN_EXS',`265226807')
 m4_define(`DLPAGE',`I18N(`EN',`download.html')`'I18N(`DE',`download-de.html')')
 m4_define(`MIRROR_IE_URL',`http://ftp.heanet.ie/mirrors/ftp.gpg4win.org/')
 m4_define(`SOFTWARE',`
