@@ -1,3 +1,7 @@
+2010-07-28  Emanuel Schuetze <emanuel@intevation.de>
+
+	* website/versions.m4, website/NEWS.last: Update for 2.0.4 release.
+
 2010-07-21  Emanuel Schuetze <emanuel@intevation.de>
 
 	* README.pt.txt: Add readme file for Portuguese. Needs translation.
